# tunity-android-libopus-jni

./: README.md
jni/: CMakeLists.txt  build.sh  deploy.sh  opusjni.c  opusjni.h
